--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.0",
     "concurrently": "^8.2.0",
     "postcss": "^8.4.0",
